--- a/index.html
+++ b/index.html
@@ -1,5 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GNU IT - Cybersecurity and IT Advisory</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="services">
+        <h1>Our Services</h1>
+        <p>We provide expert cybersecurity and IT advisory services to help you secure your digital assets.</p>
+        <!-- Add more content about your services -->
+    </section>
+    <section id="about">
+        <h1>About Us</h1>
+        <p>Learn about our experienced team of IT professionals dedicated to your security.</p>
+        <!-- Add more content about your team -->
+    </section>
+    <section id="contact">
+        <h1>Contact Us</h1>
+        <p>Get in touch with us to discuss how we can assist you in your cybersecurity needs.</p>
+        <!-- Add a contact form or contact information -->
+    </section>
+    <footer>
+        <p>&copy; 2023 GNU IT. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
