feat: Modernize site with new design, translations (PT/FR), and SEO improvements

--- a/index-fr.html
+++ b/index-fr.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>GNU IT - Cybersecurity Strategy, Governance & Advisory</title>
+    <title>GNU IT - Stratégie de Cybersécurité et Gouvernance</title>
     <meta name="description"
-        content="Expert Cybersecurity Advisory, vCISO services, and IT Governance. We help organizations secure their digital assets with NIST CSF 2.0, ISO 27001, and Zero Trust strategies.">
+        content="Conseil expert en cybersécurité, services vCISO et gouvernance informatique. Nous aidons les organisations à sécuriser leurs actifs numériques avec NIST CSF 2.0, ISO 27001 et des stratégies Zero Trust.">
     <meta name="keywords"
-        content="Cybersecurity, vCISO, IT Governance, NIST CSF 2.0, ISO 27001, Zero Trust, Security Architecture, InfoSec Advisory">
+        content="Cybersécurité, vCISO, Gouvernance informatique, NIST CSF 2.0, ISO 27001, Zero Trust, Architecture de sécurité, Conseil InfoSec">
     <meta name="author" content="GNU IT">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Social Media -->
-    <meta property="og:title" content="GNU IT - Strategic Cybersecurity & Governance">
+    <meta property="og:title" content="GNU IT - Cybersécurité Stratégique et Gouvernance">
     <meta property="og:description"
-        content="Elevating security posture through expert Advisory, Architecture, and Governance.">
+        content="Élever votre posture de sécurité grâce à des conseils experts, une architecture et une gouvernance.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://gnu-it.com/">
+    <meta property="og:url" content="https://gnu-it.com/index-fr.html">
     <meta property="og:image" content="https://gnu-it.com/cybersecurity-banner.png">
 
     <!-- Security Headers (Meta equivalent) -->
@@ -46,11 +46,11 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#frameworks">Frameworks</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#frameworks">Cadres</a></li>
+                    <li><a href="#about">À Propos</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li class="lang-switch">
-                        <a href="index.html" class="lang-link active" title="English">
+                        <a href="index.html" class="lang-link" title="English">
                             <svg class="lang-flag" viewBox="0 0 60 30" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="60" height="30" fill="#b22234" />
                                 <path
@@ -70,7 +70,7 @@
                                 <path d="M20,21a11,11 0 0,0 20,0" fill="none" stroke="#fff" stroke-width="1" />
                             </svg>
                         </a>
-                        <a href="index-fr.html" class="lang-link" title="Français">
+                        <a href="index-fr.html" class="lang-link active" title="Français">
                             <svg class="lang-flag" viewBox="0 0 3 2" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="1" height="2" x="0" fill="#0055A4" />
                                 <rect width="1" height="2" x="1" fill="#FFFFFF" />
@@ -86,10 +86,10 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container hero-content">
-            <h1>Strategic Cybersecurity & Governance</h1>
-            <p>Elevating your security posture through expert Advisory, Architecture, and Governance. We bridge the gap
-                between technical security and business strategy.</p>
-            <a href="#contact" class="btn btn-primary">Get in Touch</a>
+            <h1>Cybersécurité Stratégique et Gouvernance</h1>
+            <p>Élever votre posture de sécurité grâce à des conseils experts, une architecture et une gouvernance. Nous
+                comblons le fossé entre la sécurité technique et la stratégie commerciale.</p>
+            <a href="#contact" class="btn btn-primary">Contactez-nous</a>
         </div>
     </section>
 
@@ -97,30 +97,29 @@
     <section id="services">
         <div class="container">
             <div class="section-title">
-                <h2>Our Expertise</h2>
-                <p>Comprehensive solutions for the modern threat landscape</p>
+                <h2>Notre Expertise</h2>
+                <p>Des solutions complètes pour le paysage moderne des menaces</p>
             </div>
 
             <div class="services-grid">
                 <!-- Advisory & vCISO -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <!-- Icon placeholder: Shield/Strategy -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
                         </svg>
                     </div>
-                    <h3>Advisory & vCISO</h3>
-                    <p>Strategic security leadership on demand. We help organizations define their security roadmap,
-                        manage risks, and align security initiatives with business goals. Perfect for organizations
-                        needing high-level expertise without a full-time CISO.</p>
+                    <h3>Conseil et vCISO</h3>
+                    <p>Leadership stratégique en sécurité à la demande. Nous aidons les organisations à définir leur
+                        feuille de route de sécurité, à gérer les risques et à aligner les initiatives de sécurité sur
+                        les objectifs commerciaux. Parfait pour les entreprises ayant besoin d'une expertise de haut
+                        niveau sans un RSSI à temps plein.</p>
                 </div>
 
                 <!-- GRC -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <!-- Icon placeholder: Scale/Balance -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
@@ -128,16 +127,15 @@
                             <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                         </svg>
                     </div>
-                    <h3>Governance, Risk & Compliance</h3>
-                    <p>Navigate the complex landscape of regulations and standards. We assist with policy development,
-                        risk assessments, and compliance readiness for major frameworks including ISO 27001, NIST, and
-                        SOC 2.</p>
+                    <h3>Gouvernance, Risque et Conformité</h3>
+                    <p>Naviguez dans le paysage complexe des réglementations et des normes. Nous vous aidons à élaborer
+                        des politiques, à évaluer les risques et à vous préparer à la conformité avec les principaux
+                        cadres, notamment ISO 27001, NIST et SOC 2.</p>
                 </div>
 
                 <!-- Security Architecture -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <!-- Icon placeholder: Structure -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path
@@ -146,26 +144,25 @@
                             <line x1="2" y1="20" x2="2" y2="20"></line>
                         </svg>
                     </div>
-                    <h3>Security Architecture</h3>
-                    <p>Design robust, resilient systems from the ground up. Our Zero Trust approach ensures your
-                        infrastructure—whether On-Prem, Cloud (Azure/AWS), or Hybrid—is secure by design and defended
-                        against modern threats.</p>
+                    <h3>Architecture de Sécurité</h3>
+                    <p>Concevez des systèmes robustes et résilients dès le départ. Notre approche Zero Trust garantit
+                        que votre infrastructure — qu'elle soit sur site, dans le cloud (Azure/AWS) ou hybride — est
+                        sécurisée dès la conception et défendue contre les menaces modernes.</p>
                 </div>
 
                 <!-- Assessment & Audit -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <!-- Icon placeholder: Search/Check -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
                             <polyline points="22 4 12 14.01 9 11.01"></polyline>
                         </svg>
                     </div>
-                    <h3>Assessment & Audit</h3>
-                    <p>Identify vulnerabilities before they are exploited. We conduct comprehensive gap analyses against
-                        industry standards (NIST CSF 2.0, CIS Controls) to pinpoint weaknesses and provide actionable
-                        remediation plans.</p>
+                    <h3>Évaluation et Audit</h3>
+                    <p>Identifiez les vulnérabilités avant qu'elles ne soient exploitées. Nous effectuons des analyses
+                        d'écarts complètes par rapport aux normes de l'industrie (NIST CSF 2.0, Contrôles CIS) pour
+                        identifier les faiblesses et fournir des plans de remédiation exploitables.</p>
                 </div>
             </div>
         </div>
@@ -175,34 +172,34 @@
     <section id="frameworks">
         <div class="container">
             <div class="section-title">
-                <h2>Standards & Frameworks</h2>
-                <p>Aligned with global best practices</p>
+                <h2>Normes et Cadres</h2>
+                <p>Alignés sur les meilleures pratiques mondiales</p>
             </div>
             <div class="frameworks-grid">
                 <div class="framework-item">
                     <h4>NIST CSF 2.0</h4>
-                    <span class="framework-badge">Updated</span>
-                    <p>Govern, Identify, Protect, Detect, Respond, Recover</p>
+                    <span class="framework-badge">Mis à jour</span>
+                    <p>Gouverner, Identifier, Protéger, Détecter, Répondre, Récupérer</p>
                 </div>
                 <div class="framework-item">
                     <h4>NIST Zero Trust</h4>
                     <span class="framework-badge">SP 800-207</span>
-                    <p>Never Trust, Always Verify Architecture</p>
+                    <p>Architecture "Ne jamais faire confiance, toujours vérifier"</p>
                 </div>
                 <div class="framework-item">
                     <h4>ISO 27001</h4>
-                    <span class="framework-badge">Certified</span>
-                    <p>Information Security Management Systems</p>
+                    <span class="framework-badge">Certifié</span>
+                    <p>Systèmes de gestion de la sécurité de l'information</p>
                 </div>
                 <div class="framework-item">
-                    <h4>CIS Controls</h4>
-                    <span class="framework-badge">Benchmark</span>
-                    <p>Critical Security Controls</p>
+                    <h4>Contrôles CIS</h4>
+                    <span class="framework-badge">Référence</span>
+                    <p>Contrôles de sécurité critiques</p>
                 </div>
                 <div class="framework-item">
-                    <h4>Cloud Security</h4>
+                    <h4>Sécurité Cloud</h4>
                     <span class="framework-badge">Azure / M365</span>
-                    <p>Cloud Security Alliance & Best Practices</p>
+                    <p>Cloud Security Alliance et Meilleures Pratiques</p>
                 </div>
             </div>
         </div>
@@ -212,23 +209,25 @@
     <section id="about">
         <div class="container">
             <div class="section-title">
-                <h2>About GNU IT</h2>
+                <h2>À Propos de GNU IT</h2>
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <p>At GNU IT, we bring over 20 years of unparalleled expertise to the realm of cybersecurity and IT
-                        infrastructure. We are not just consultants; we are strategic partners dedicated to securing
-                        your digital future.</p>
-                    <p>Our experience extends beyond conventional boundaries, encompassing a deep understanding of
-                        industry standards such as CIS, NIST, MITRE, and ISO 27001. We specialize in translating complex
-                        security requirements into clear, business-aligned strategies.</p>
-                    <p>From Zero Trust implementation to Cloud Security fortification (Azure/Microsoft 365), we provide
-                        the architectural guidance and governance structures necessary to thrive in a digital-first
-                        world.</p>
-                    <a href="#contact" class="btn">Learn More</a>
+                    <p>Chez GNU IT, nous apportons plus de 20 ans d'expertise inégalée dans le domaine de la
+                        cybersécurité et de l'infrastructure informatique. Nous ne sommes pas seulement des consultants
+                        ; nous sommes des partenaires stratégiques dédiés à la sécurisation de votre avenir numérique.
+                    </p>
+                    <p>Notre expérience s'étend au-delà des frontières conventionnelles, englobant une compréhension
+                        approfondie des normes de l'industrie telles que CIS, NIST, MITRE et ISO 27001. Nous sommes
+                        spécialisés dans la traduction d'exigences de sécurité complexes en stratégies claires et
+                        alignées sur les affaires.</p>
+                    <p>De la mise en œuvre de Zero Trust au renforcement de la sécurité dans le cloud (Azure/Microsoft
+                        365), nous fournissons les conseils architecturaux et les structures de gouvernance nécessaires
+                        pour prospérer dans un monde numérique.</p>
+                    <a href="#contact" class="btn">En Savoir Plus</a>
                 </div>
                 <div class="about-image">
-                    <img src="about-image.jpg" alt="About GNU IT - Cybersecurity Experts">
+                    <img src="about-image.jpg" alt="À Propos de GNU IT - Experts en Cybersécurité">
                 </div>
             </div>
         </div>
@@ -238,12 +237,12 @@
     <section id="contact">
         <div class="container">
             <div class="contact-box">
-                <h2>Start the Conversation</h2>
-                <p>Ready to elevate your security strategy? Reach out for a consultation.</p>
+                <h2>Lancez la Conversation</h2>
+                <p>Prêt à élever votre stratégie de sécurité ? Contactez-nous pour une consultation.</p>
                 <a href="mailto:contact@gnu-it.com" class="contact-link">contact@gnu-it.com</a>
                 <div style="margin-top: 20px;">
                     <a href="https://www.linkedin.com/company/gnuit" target="_blank" rel="noopener noreferrer"
-                        class="btn">Follow us on LinkedIn</a>
+                        class="btn">Suivez-nous sur LinkedIn</a>
                 </div>
             </div>
         </div>
@@ -251,7 +250,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 GNU IT. All rights reserved.</p>
+            <p>&copy; 2025 GNU IT. Tous droits réservés.</p>
         </div>
     </footer>
 </body>
