--- a/index-pt.html
+++ b/index-pt.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>GNU IT - Cybersecurity Strategy, Governance & Advisory</title>
+    <title>GNU IT - Estratégia de Cibersegurança, Governança e Consultoria</title>
     <meta name="description"
-        content="Expert Cybersecurity Advisory, vCISO services, and IT Governance. We help organizations secure their digital assets with NIST CSF 2.0, ISO 27001, and Zero Trust strategies.">
+        content="Consultoria especializada em Cibersegurança, serviços de vCISO e Governança de TI. Ajudamos organizações a proteger seus ativos digitais com NIST CSF 2.0, ISO 27001 e estratégias Zero Trust.">
     <meta name="keywords"
-        content="Cybersecurity, vCISO, IT Governance, NIST CSF 2.0, ISO 27001, Zero Trust, Security Architecture, InfoSec Advisory">
+        content="Cibersegurança, vCISO, Governança de TI, NIST CSF 2.0, ISO 27001, Zero Trust, Arquitetura de Segurança, Consultoria InfoSec">
     <meta name="author" content="GNU IT">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Social Media -->
-    <meta property="og:title" content="GNU IT - Strategic Cybersecurity & Governance">
+    <meta property="og:title" content="GNU IT - Cibersegurança Estratégica e Governança">
     <meta property="og:description"
-        content="Elevating security posture through expert Advisory, Architecture, and Governance.">
+        content="Elevando sua postura de segurança através de Consultoria, Arquitetura e Governança especializadas.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://gnu-it.com/">
+    <meta property="og:url" content="https://gnu-it.com/index-pt.html">
     <meta property="og:image" content="https://gnu-it.com/cybersecurity-banner.png">
 
     <!-- Security Headers (Meta equivalent) -->
@@ -45,12 +45,12 @@
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#services">Serviços</a></li>
                     <li><a href="#frameworks">Frameworks</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#contact">Contato</a></li>
                     <li class="lang-switch">
-                        <a href="index.html" class="lang-link active" title="English">
+                        <a href="index.html" class="lang-link" title="English">
                             <svg class="lang-flag" viewBox="0 0 60 30" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="60" height="30" fill="#b22234" />
                                 <path
@@ -62,7 +62,7 @@
                                     stroke="#fff" stroke-width="1" />
                             </svg>
                         </a>
-                        <a href="index-pt.html" class="lang-link" title="Português">
+                        <a href="index-pt.html" class="lang-link active" title="Português">
                             <svg class="lang-flag" viewBox="0 0 60 42" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="60" height="42" fill="#009c3b" />
                                 <path d="M30,6L54,21L30,36L6,21Z" fill="#ffdf00" />
@@ -86,10 +86,10 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container hero-content">
-            <h1>Strategic Cybersecurity & Governance</h1>
-            <p>Elevating your security posture through expert Advisory, Architecture, and Governance. We bridge the gap
-                between technical security and business strategy.</p>
-            <a href="#contact" class="btn btn-primary">Get in Touch</a>
+            <h1>Cibersegurança Estratégica e Governança</h1>
+            <p>Elevando sua postura de segurança através de Consultoria, Arquitetura e Governança especializadas. Nós
+                conectamos a segurança técnica com a estratégia de negócios.</p>
+            <a href="#contact" class="btn btn-primary">Entre em Contato</a>
         </div>
     </section>
 
@@ -97,30 +97,29 @@
     <section id="services">
         <div class="container">
             <div class="section-title">
-                <h2>Our Expertise</h2>
-                <p>Comprehensive solutions for the modern threat landscape</p>
+                <h2>Nossa Expertise</h2>
+                <p>Soluções abrangentes para o cenário de ameaças moderno</p>
             </div>
 
             <div class="services-grid">
                 <!-- Advisory & vCISO -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <!-- Icon placeholder: Shield/Strategy -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
                         </svg>
                     </div>
-                    <h3>Advisory & vCISO</h3>
-                    <p>Strategic security leadership on demand. We help organizations define their security roadmap,
-                        manage risks, and align security initiatives with business goals. Perfect for organizations
-                        needing high-level expertise without a full-time CISO.</p>
+                    <h3>Consultoria e vCISO</h3>
+                    <p>Liderança estratégica de segurança sob demanda. Ajudamos organizações a definir seu roteiro de
+                        segurança, gerenciar riscos e alinhar iniciativas de segurança com objetivos de negócios.
+                        Perfeito para empresas que precisam de expertise de alto nível sem um CISO em tempo integral.
+                    </p>
                 </div>
 
                 <!-- GRC -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <!-- Icon placeholder: Scale/Balance -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
@@ -128,16 +127,15 @@
                             <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                         </svg>
                     </div>
-                    <h3>Governance, Risk & Compliance</h3>
-                    <p>Navigate the complex landscape of regulations and standards. We assist with policy development,
-                        risk assessments, and compliance readiness for major frameworks including ISO 27001, NIST, and
-                        SOC 2.</p>
+                    <h3>Governança, Risco e Compliance</h3>
+                    <p>Navegue pelo complexo cenário de regulamentações e normas. Auxiliamos no desenvolvimento de
+                        políticas, avaliações de risco e prontidão para conformidade com os principais frameworks,
+                        incluindo ISO 27001, NIST e SOC 2.</p>
                 </div>
 
                 <!-- Security Architecture -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <!-- Icon placeholder: Structure -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path
@@ -146,26 +144,25 @@
                             <line x1="2" y1="20" x2="2" y2="20"></line>
                         </svg>
                     </div>
-                    <h3>Security Architecture</h3>
-                    <p>Design robust, resilient systems from the ground up. Our Zero Trust approach ensures your
-                        infrastructure—whether On-Prem, Cloud (Azure/AWS), or Hybrid—is secure by design and defended
-                        against modern threats.</p>
+                    <h3>Arquitetura de Segurança</h3>
+                    <p>Projete sistemas robustos e resilientes desde o início. Nossa abordagem Zero Trust garante que
+                        sua infraestrutura — seja On-Prem, Nuvem (Azure/AWS) ou Híbrida — seja segura por design e
+                        defendida contra ameaças modernas.</p>
                 </div>
 
                 <!-- Assessment & Audit -->
                 <div class="service-card">
                     <div class="service-icon">
-                        <!-- Icon placeholder: Search/Check -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
                             <polyline points="22 4 12 14.01 9 11.01"></polyline>
                         </svg>
                     </div>
-                    <h3>Assessment & Audit</h3>
-                    <p>Identify vulnerabilities before they are exploited. We conduct comprehensive gap analyses against
-                        industry standards (NIST CSF 2.0, CIS Controls) to pinpoint weaknesses and provide actionable
-                        remediation plans.</p>
+                    <h3>Avaliação e Auditoria</h3>
+                    <p>Identifique vulnerabilidades antes que sejam exploradas. Realizamos análises de lacunas
+                        abrangentes em relação aos padrões da indústria (NIST CSF 2.0, Controles CIS) para apontar
+                        fraquezas e fornecer planos de remediação acionáveis.</p>
                 </div>
             </div>
         </div>
@@ -175,34 +172,34 @@
     <section id="frameworks">
         <div class="container">
             <div class="section-title">
-                <h2>Standards & Frameworks</h2>
-                <p>Aligned with global best practices</p>
+                <h2>Padrões e Frameworks</h2>
+                <p>Alinhados com as melhores práticas globais</p>
             </div>
             <div class="frameworks-grid">
                 <div class="framework-item">
                     <h4>NIST CSF 2.0</h4>
-                    <span class="framework-badge">Updated</span>
-                    <p>Govern, Identify, Protect, Detect, Respond, Recover</p>
+                    <span class="framework-badge">Atualizado</span>
+                    <p>Governar, Identificar, Proteger, Detectar, Responder, Recuperar</p>
                 </div>
                 <div class="framework-item">
                     <h4>NIST Zero Trust</h4>
                     <span class="framework-badge">SP 800-207</span>
-                    <p>Never Trust, Always Verify Architecture</p>
+                    <p>Arquitetura "Nunca Confie, Sempre Verifique"</p>
                 </div>
                 <div class="framework-item">
                     <h4>ISO 27001</h4>
-                    <span class="framework-badge">Certified</span>
-                    <p>Information Security Management Systems</p>
+                    <span class="framework-badge">Certificado</span>
+                    <p>Sistemas de Gestão de Segurança da Informação</p>
                 </div>
                 <div class="framework-item">
-                    <h4>CIS Controls</h4>
+                    <h4>Controles CIS</h4>
                     <span class="framework-badge">Benchmark</span>
-                    <p>Critical Security Controls</p>
+                    <p>Controles Críticos de Segurança</p>
                 </div>
                 <div class="framework-item">
-                    <h4>Cloud Security</h4>
+                    <h4>Segurança em Nuvem</h4>
                     <span class="framework-badge">Azure / M365</span>
-                    <p>Cloud Security Alliance & Best Practices</p>
+                    <p>Cloud Security Alliance e Melhores Práticas</p>
                 </div>
             </div>
         </div>
@@ -212,23 +209,23 @@
     <section id="about">
         <div class="container">
             <div class="section-title">
-                <h2>About GNU IT</h2>
+                <h2>Sobre a GNU IT</h2>
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <p>At GNU IT, we bring over 20 years of unparalleled expertise to the realm of cybersecurity and IT
-                        infrastructure. We are not just consultants; we are strategic partners dedicated to securing
-                        your digital future.</p>
-                    <p>Our experience extends beyond conventional boundaries, encompassing a deep understanding of
-                        industry standards such as CIS, NIST, MITRE, and ISO 27001. We specialize in translating complex
-                        security requirements into clear, business-aligned strategies.</p>
-                    <p>From Zero Trust implementation to Cloud Security fortification (Azure/Microsoft 365), we provide
-                        the architectural guidance and governance structures necessary to thrive in a digital-first
-                        world.</p>
-                    <a href="#contact" class="btn">Learn More</a>
+                    <p>Na GNU IT, trazemos mais de 20 anos de experiência inigualável para o mundo da cibersegurança e
+                        infraestrutura de TI. Não somos apenas consultores; somos parceiros estratégicos dedicados a
+                        garantir o seu futuro digital.</p>
+                    <p>Nossa experiência vai além das fronteiras convencionais, abrangendo um profundo entendimento de
+                        padrões da indústria como CIS, NIST, MITRE e ISO 27001. Somos especialistas em traduzir
+                        requisitos complexos de segurança em estratégias claras e alinhadas aos negócios.</p>
+                    <p>Da implementação de Zero Trust ao fortalecimento da Segurança em Nuvem (Azure/Microsoft 365),
+                        fornecemos a orientação arquitetural e as estruturas de governança necessárias para prosperar em
+                        um mundo digital.</p>
+                    <a href="#contact" class="btn">Saiba Mais</a>
                 </div>
                 <div class="about-image">
-                    <img src="about-image.jpg" alt="About GNU IT - Cybersecurity Experts">
+                    <img src="about-image.jpg" alt="Sobre a GNU IT - Especialistas em Cibersegurança">
                 </div>
             </div>
         </div>
@@ -238,12 +235,12 @@
     <section id="contact">
         <div class="container">
             <div class="contact-box">
-                <h2>Start the Conversation</h2>
-                <p>Ready to elevate your security strategy? Reach out for a consultation.</p>
+                <h2>Inicie a Conversa</h2>
+                <p>Pronto para elevar sua estratégia de segurança? Entre em contato para uma consultoria.</p>
                 <a href="mailto:contact@gnu-it.com" class="contact-link">contact@gnu-it.com</a>
                 <div style="margin-top: 20px;">
                     <a href="https://www.linkedin.com/company/gnuit" target="_blank" rel="noopener noreferrer"
-                        class="btn">Follow us on LinkedIn</a>
+                        class="btn">Siga-nos no LinkedIn</a>
                 </div>
             </div>
         </div>
@@ -251,7 +248,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 GNU IT. All rights reserved.</p>
+            <p>&copy; 2025 GNU IT. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
